fix z-index bug

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -124,6 +124,7 @@ body {
   margin: 0 auto;
   padding-top: 100px;
   padding-bottom: 100px;
+  z-index: 10;
 }
 
 .main {
